@@ -1,4 +1,5 @@
 /*
+ * Copyright (c) 2024 Contributors to the Eclipse Foundation.
  * Copyright (c) 2006, 2018 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
@@ -20,44 +21,45 @@ import com.sun.enterprise.config.serverbeans.AdminService;
 import com.sun.enterprise.config.serverbeans.Config;
 import com.sun.enterprise.config.serverbeans.ServerTags;
 import com.sun.enterprise.v3.admin.AdminAdapter;
-import org.glassfish.grizzly.config.dom.NetworkListener;
-import org.glassfish.grizzly.config.dom.ThreadPool;
-import org.jvnet.hk2.config.types.Property;
-import org.glassfish.server.ServerEnvironmentImpl;
 
 import java.net.InetAddress;
 import java.net.UnknownHostException;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.logging.Level;
 import java.util.logging.Logger;
-import org.glassfish.kernel.KernelLoggerInfo;
 
-/** Makes various decisions about the admin adapters.
+import org.glassfish.grizzly.config.dom.NetworkListener;
+import org.glassfish.grizzly.config.dom.ThreadPool;
+import org.glassfish.kernel.KernelLoggerInfo;
+import org.glassfish.server.ServerEnvironmentImpl;
+import org.jvnet.hk2.config.types.Property;
+
+/**
+ * Makes various decisions about the admin adapters.
  *
  * @author &#2325;&#2375;&#2342;&#2366;&#2352; (km@dev.java.net)
  * @since GlassFish V3 (March 2008)
  */
 public final class AdminEndpointDecider {
 
+    private static final Logger logger = KernelLoggerInfo.getLogger();
+
+    public static final int ADMIN_PORT = 4848;
+
+    private final Config config;
     private String asadminContextRoot;
     private String guiContextRoot;
-    private List<String> asadminHosts; //list of virtual servers for asadmin
-    private List<String> guiHosts;     //list of virtual servers for admin GUI
-
-    private int port;  // both asadmin and admin GUI are on same port
+    private List<String> asadminHosts; // List of virtual servers for asadmin
+    private List<String> guiHosts;     // List of virtual servers for admin GUI
     private InetAddress address;
+    private int port;  // Both asadmin and admin GUI are on same port
     private int maxThreadPoolSize = 5;
-    private Config cfg;
-    private Logger log = KernelLoggerInfo.getLogger();
 
-    public static final int ADMIN_PORT           = 4848;
-
-    public AdminEndpointDecider(Config cfg) {
-        if (cfg == null || log == null)
+    public AdminEndpointDecider(Config config) {
+        if (config == null || logger == null) {
             throw new IllegalArgumentException("config or logger can't be null");
-        this.cfg = cfg;
+        }
+        this.config = config;
         setValues();
     }
 
@@ -90,63 +92,72 @@ public final class AdminEndpointDecider {
     }
 
     private void setValues() {
-        asadminContextRoot = AdminAdapter.PREFIX_URI;  //can't change
-        //asadminHosts       = Collections.emptyList();  //asadmin is handled completely by the adapter, no VS needed
-        NetworkListener nl = cfg.getAdminListener();
-        ThreadPool tp = nl.findThreadPool();
-        if (tp != null) {
+        asadminContextRoot = AdminAdapter.PREFIX_URI;  // Can't change
+
+        NetworkListener adminListener = config.getAdminListener();
+        ThreadPool threadPool = adminListener.findThreadPool();
+        if (threadPool != null) {
             try {
-                maxThreadPoolSize = Integer.parseInt(tp.getMaxThreadPoolSize());
+                maxThreadPoolSize = Integer.parseInt(threadPool.getMaxThreadPoolSize());
             } catch (NumberFormatException ne) {
+                logger.log(Level.WARNING, "Invalid maxThreadPoolSize value: {0}", threadPool.getMaxThreadPoolSize());
             }
         }
-        String dvs     = nl.findHttpProtocol().getHttp().getDefaultVirtualServer();
-        guiHosts       = Collections.unmodifiableList(Arrays.asList(dvs));
-        asadminHosts   = guiHosts;  //same for now
+        String defaultVirtualServer = adminListener.findHttpProtocol().getHttp().getDefaultVirtualServer();
+        guiHosts = List.of(defaultVirtualServer);
+        asadminHosts = guiHosts;  // Same for now
         try {
-            address = InetAddress.getByName(nl.getAddress());
+            address = InetAddress.getByName(adminListener.getAddress());
         } catch (UnknownHostException e) {
             throw new IllegalStateException(e);
         }
-        if (ServerTags.ADMIN_LISTENER_ID.equals(nl.getName())) {
-            guiContextRoot = "";  //at the root context for separate admin-listener
+
+        if (ServerTags.ADMIN_LISTENER_ID.equals(adminListener.getName())) {
+            // At the root context for separate admin-listener
+            guiContextRoot = "";
             try {
-                port = Integer.parseInt(nl.getPort());
-            } catch(NumberFormatException ne) {
+                port = Integer.parseInt(adminListener.getPort());
+            } catch(NumberFormatException e) {
+                logger.log(Level.WARNING, "Invalid admin port: {0}", adminListener.getPort());
                 port = ADMIN_PORT;
             }
-        }
-        else {
+        } else {
             try {
-                port = Integer.parseInt(nl.getPort());
-            } catch(NumberFormatException ne) {
-                port = 8080;   // this is the last resort
+                port = Integer.parseInt(adminListener.getPort());
+            } catch (NumberFormatException e) {
+                logger.log(Level.WARNING, "Invalid admin port: {0}", adminListener.getPort());
+                port = 8080;   // This is the last resort
             }
-            //get the context root from admin-service
-            AdminService as = cfg.getAdminService();
-            if (as == null)
+
+            // Get the context root from admin-service
+            AdminService adminService = config.getAdminService();
+            if (adminService == null) {
                 guiContextRoot = ServerEnvironmentImpl.DEFAULT_ADMIN_CONSOLE_CONTEXT_ROOT;
-            else
-                setGuiContextRootFromAdminService(as);
+            } else {
+                setGuiContextRootFromAdminService(adminService);
+            }
         }
     }
 
-    private void setGuiContextRootFromAdminService(AdminService as) {
-        for (Property p : as.getProperty()) {
-            setGuiContextRoot(p);
+    private void setGuiContextRootFromAdminService(AdminService adminService) {
+        for (Property property : adminService.getProperty()) {
+            setGuiContextRoot(property);
         }
     }
-    private void setGuiContextRoot(Property prop) {
-        if (prop == null) {
+
+    private void setGuiContextRoot(Property property) {
+        if (property == null) {
             guiContextRoot = ServerEnvironmentImpl.DEFAULT_ADMIN_CONSOLE_CONTEXT_ROOT;
             return;
         }
-        if (ServerTags.ADMIN_CONSOLE_CONTEXT_ROOT.equals(prop.getName())) {
-            if (prop.getValue() != null && prop.getValue().startsWith("/")) {
-                guiContextRoot = prop.getValue();
-                log.log(Level.INFO, KernelLoggerInfo.contextRoot, guiContextRoot);
+
+        if (ServerTags.ADMIN_CONSOLE_CONTEXT_ROOT.equals(property.getName())) {
+            if (property.getValue() != null && property.getValue().startsWith("/")) {
+                guiContextRoot = property.getValue();
+                logger.log(Level.INFO, KernelLoggerInfo.contextRoot, guiContextRoot);
             } else {
-                log.log(Level.INFO, KernelLoggerInfo.invalidContextRoot, ServerEnvironmentImpl.DEFAULT_ADMIN_CONSOLE_CONTEXT_ROOT);
+                logger.log(Level.INFO, KernelLoggerInfo.invalidContextRoot,
+                        ServerEnvironmentImpl.DEFAULT_ADMIN_CONSOLE_CONTEXT_ROOT);
                 guiContextRoot = ServerEnvironmentImpl.DEFAULT_ADMIN_CONSOLE_CONTEXT_ROOT;
             }
         }
